separate code file

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
     </div>
 </div>
+<br>
 <div style="position:relative; width:4000px; height:4000px;">
     <div id="coor"></div>
 
@@ -73,7 +74,16 @@
     </canvas>
 </div>
 
-<script type="text/javascript" src="js/app.js?v=3">
+<script type="text/javascript" src="js/const.js"></script>
+<script type="text/javascript" src="js/State.js"></script>
+<script type="text/javascript" src="js/Node.js"></script>
+<script type="text/javascript" src="js/Graph.js"></script>
+<script type="text/javascript" src="js/Action.js"></script>
+<script type="text/javascript" src="js/Algorithm.js"></script>
+<script type="text/javascript" src="js/Bfs.js"></script>
+<script type="text/javascript" src="js/Game.js"></script>
+<script type="text/javascript" src="js/GenerationMaze.js"></script>
+<script type="text/javascript" src="js/app.js?v=4">
 
 </script>
 </body>
