--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <button id="startGame">Start game</button>
         <button id="run">Run</button>
-        <button id="generateMap">Generate map</button>
+        <button id="generateMap">Generate maze</button>
         <button id="runAgain">Run again</button>
         <br>
         <br>
@@ -47,12 +47,12 @@
             <option value="A_star">A star</option>
         </select>
         <select id="select_map">
-            <option value="">Choose map</option>
-            <option value="Map1.txt">Map 1</option>
-            <option value="Map2.txt">Map 2</option>
-            <option value="Map3.txt">Map 3</option>
-            <option value="Map4.txt">Map 4</option>
-            <option value="Map5.txt">Map 5</option>
+            <option value="">Choose maze</option>
+            <option value="Map1.txt">Maze 1</option>
+            <option value="Map2.txt">Maze 2</option>
+            <option value="Map3.txt">Maze 3</option>
+            <option value="Map4.txt">Maze 4</option>
+            <option value="Map5.txt">Maze 5</option>
         </select>
         <br>
         <br>
